# SoftwareRequirements

./: .gitignore  README.md  requirements.txt
Automation/: Dockerfile.claude  Dockerfile.gemini  claude-code-run.sh  gemini-cli-run.sh
BestBikePaths/: main_bbb.tex  titlepage_bbb.tex
CodeKataBattle/: main_ckb.tex  titlepage_ckb.tex
Problem1/: CONTEX.md  CONTEXT.md  REQ1.md  REQ3.md
Problem1 - Copilot/: REQ2-Copilot.md  REQ3-Copilot.md  REQ3-HUMAN_READABLE-Copilot copy.md  REQ4-Copilot.md
Problem2/: CONTEX.md  CONTEXT.md  REQ3.md
Problem2 - SeatsReservation/: CONTEXT-SeatsReservation.md  REQ1-SeatsReservation.md  REQ2-SeatsReservation.md  REQ3-HUMAN_READABLE-SeatsReservation.md  REQ3-SeatsReservation.md  REQ4-SeatsReservation.md
Problem3 - FleetRouter/: CONTEXT-FleetRouter.md  REQ1-FleetRouter.md  REQ3-FleetRouter.md  (+2 more)
Runs/run-28-04-2026-FleetRouter-REQ1-Claude-2/: SUMMARY.md  fleetrouter.py  fleetrouter_cmd  fleetrouter_run.py  pylint-report.txt  pyproject.toml  result.json  setup.py
Runs/run-28-04-2026-FleetRouter-REQ1-Claude-2/fleetrouter/: io.py  main.py  models.py  router.py
Runs/run-28-04-2026-FleetRouter-REQ1-Claude-2/fleetrouter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Runs/run-29-04-2026-FleetRouter-REQ2-Claude-1/: REQUIREMENTS.md  SUMMARY.md  fleetrouter.sh  pylint-report.txt  pyproject.toml  result.json
Runs/run-29-04-2026-FleetRouter-REQ2-Claude-1/fleetrouter/: __main__.py  models.py  planner.py  reader.py  writer.py
Runs/run-29-04-2026-FleetRouter-REQ2-Claude-1/fleetrouter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+175 files in other folders)
