[build-system]
requires = ["setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetrouter"
version = "1.0.0"
description = "Daily route planning for courier companies"
requires-python = ">=3.8"

[project.scripts]
fleetrouter = "fleetrouter.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fleetrouter*"]
