[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetrouter"
version = "1.0.0"
description = "Daily route planner for courier fleets"
requires-python = ">=3.9"

[project.scripts]
fleetrouter = "fleetrouter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
